<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:text="@string/txt_registerUser"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.andreabaccega.widget.FormEditText
                whatever:testType="personFullName"
                android:id="@+id/name"
                android:hint="@string/txtHintRegister_Name"
                whatever:emptyErrorString="@string/error_userempty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.andreabaccega.widget.FormEditText
                whatever:testType="email"
                android:id="@+id/email"
                whatever:emptyErrorString="@string/error_emailempty"
                android:hint="@string/txtHintRegister_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/txtHintRegister_Password"
                android:padding="10dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <!--<android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/txtHintRegister_Password2"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_device"/>
        <Spinner
            android:id="@+id/spinnerMAC"
            android:hint="@string/txtHintRegister_Device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_region"/>
        <Spinner
            android:id="@+id/spinnerRegion"
            android:hint="@string/txtHintRegister_Region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_level"/>
        <Spinner
            android:id="@+id/level"
            android:hint="@string/txtHintRegister_Level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"/>

        <!-- Login Button -->
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center">

            <com.rey.material.widget.Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                app:rd_rippleColor="@color/ColorPrimary"
                android:text="@string/btn_register"
                android:layout_marginTop="10dip"
                android:background="@drawable/bg_bt_raise_dark"
                style="@style/Material.Drawable.Ripple.Wave.Light"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
</android.support.design.widget.CoordinatorLayout>