<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/gradient_background">

        <ImageView
            android:id="@+id/ado_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ado"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight= "20dp"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usuario_txt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_User"
                    android:textStyle="bold"
                    android:gravity="center" />

                <com.andreabaccega.widget.FormEditText
                    whatever:testType="regexp"
                    whatever:customRegexp="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$"
                    whatever:testErrorString="@string/error_emailnotvalid"
                    whatever:emptyErrorString="@string/error_emailempty"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dip"
                    android:singleLine="true"
                    android:hint="@string/txtHint_User"
                    android:drawableLeft="@drawable/ic_action_account_circle"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    />

                <TextView
                    android:id="@+id/password_txt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_Password"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/password"
                    whatever:emptyErrorString="@string/error_passwordempty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:singleLine="true"
                    android:hint="@string/txtHint_Password"
                    android:drawableLeft="@drawable/ic_action_lock"
                    android:drawablePadding="10dp"
                    />

                <TextView
                    android:id="@+id/ip_txt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_IP"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/ipAddress"
                    whatever:emptyErrorString="@string/error_ipempty"
                    whatever:testErrorString="@string/error_ipnotvalid"
                    whatever:testType="ipAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:singleLine="true"
                    android:hint="@string/txtHint_IP"
                    android:drawableLeft="@drawable/ic_network_wifi"
                    android:drawablePadding="10dp"
                    />

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center">

                    <com.rey.material.widget.Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bt_height"
                        android:textColor="@color/White"
                        android:layout_weight="0.4"
                        app:rd_rippleColor="@color/ColorPrimary"
                        android:text="@string/txtBtn_Login"
                        android:background="@drawable/bg_bt_raise_red_color"
                        style="@style/Material.Drawable.Ripple.Wave.Light"/>

                    <!--<com.rey.material.widget.Button
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:background="@null"
                        android:text="@string/txtBtn_Register"
                        android:textSize="15sp" /> -->

                </RelativeLayout>


                <TextView
                    android:id="@+id/macAdress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>